# CopyCat

./: CMakeLists.txt  README.md  main.c
include/: copycat.h
src/: simplecopy.c
